# sensor-observations

./: README.md  pyproject.toml
src/sensor-observations/models/: sensors.py
src/sensor_observations/benchmark/rod/: observations.parquet  train.parquet
src/sensor_observations/observation/: load_data.py
