[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "observation-models"
version = "0.1.0"
description = "A signal detector for Numpy and Pytorch"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]